--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 
-MONGO_URI=mongodb+srv://lingoudap_db_user:JdapmZzKJU7NA6JH@cluster0.fvvd3kn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://lingoudap_db_user:qVN1hchNJM3dzKUr@cluster0.fvvd3kn.mongodb.net/hr_payroll?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 FRONTEND_URL=http://localhost:3000
